Fix: Right-aligned ContextModal heading text for RTL languages

--- a/packages/components/src/Modal/ContextModal/ContextModal.module.scss
+++ b/packages/components/src/Modal/ContextModal/ContextModal.module.scss
@@ -34,6 +34,10 @@
   color: $color-purple-800;
   text-align: left;
 
+  [dir="rtl"] & {
+    text-align: right;
+  }
+
   &.padded {
     padding: $spacing-md;
 
